# Morpheus

./: .coderabbit.yaml  .gitignore  CLAUDE.md  LICENSE  README.md  agents.md
morpheus/: .env.example  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
morpheus/app/: config.py  database.py  main.py
morpheus/app/api/: auth.py  chat.py  connections.py  cookbook.py  documents.py  email.py  notes_tasks_calendar.py  obsidian.py  rag.py  remote.py  research.py  settings.py  ssh.py  terminal.py
morpheus/app/core/: agent_executor.py  chat_engine.py  memory.py  model_manager.py  rag_engine.py  research_engine.py  search_engine.py  ssh_client.py  sync.py  task_scheduler.py  terminal_manager.py  vault_watcher.py
morpheus/app/models/: __init__.py  auth.py  chat.py  document.py  email.py  memory.py  notes.py  obsidian.py  settings.py  ssh.py  system_setting.py  user.py  vault.py
morpheus/app/static/: index.html
morpheus/app/static/css/: style.css
morpheus/app/static/js/: api.js  app.js  chat.js  settings.js  terminal.js
morpheus/app/static/js/modules/: background.js  calendar.js  connections.js  cookbook.js  documents.js  email.js  notes.js  obsidian.js  (+2 more)
morpheus/app/utils/: backup.py  discovery.py  tailscale.py  vault.py
morpheus/docker/: Dockerfile  docker-compose.gpu.yml  docker-compose.yml
morpheus/scripts/: build-macos-app.sh  build-windows-portable.ps1  launch-windows.ps1  launcher.py  morpheus.service  setup.py  start-macos.sh
morpheus/tests/: conftest.py  test_chat.py  test_notes_tasks.py  test_rag.py  test_ssh.py  test_system.py  test_vault.py
(+71 files in other folders)
